[Polyam] New profile: Fix link colors in bio and display name overflow
Port 2543425e04977f3ac12f330f688eca01a34a74b7 to polyam-glitch

--- a/app/javascript/flavours/polyam/components/account_header/styles.module.scss
+++ b/app/javascript/flavours/polyam/components/account_header/styles.module.scss
@@ -78,6 +78,8 @@
 
 .nameWrapper {
   flex-grow: 1;
+  min-width: 0;
+  overflow-wrap: break-word;
 }
 
 .name {
@@ -272,6 +274,14 @@ $button-fallback-breakpoint: $button-breakpoint + 55px;
 .bio {
   font-size: 15px;
   color: var(--color-text-primary);
+
+  :any-link {
+    color: var(--color-text-status-links);
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 .familiarFollowers {
